--- a/Shop/ShopApp/templates/Index.html
+++ b/Shop/ShopApp/templates/Index.html
@@ -13,7 +13,9 @@
 
   <div class="collapse navbar-collapse" >
 <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">My orders</a>
+       {% if user.is_authenticated %}
+      <a class="nav-item nav-link" href="{% url 'myOrders' %}">My orders</a>
+     {% endif %}
         {% if user.username == "root" %}
       <a class="nav-item nav-link" href="{% url 'admin' %}">Administration</a>
         {% endif %}
