--- a/Shop/ShopApp/templates/MyOrders.html
+++ b/Shop/ShopApp/templates/MyOrders.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Buy page</title>
+    <title>Orders</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
@@ -28,19 +28,39 @@
         {% endif %}
      </div>
 </nav>
-<h1>{{ product.Name }}</h1>
-<br>
-<image style="width:500px;height:500px"  src="{{ product.img.url }}"/>
-<br>
-<span>{{ product.Desc }}</span>
-<br>
-<span>{{ product.PricePerUnit }}$</span>
-    <form method="POST">
-        {% csrf_token %}
-    <table>
-        {{ form }}
-    </table>
-    <input type="submit" value="Buy" >
-</form>
+<table class="table table-striped">
+<tr>
+    <td>
+        Product
+    </td>
+    <td>
+        Quantity
+    </td>
+    <td>
+        Date
+    </td>
+    <td>
+        Is processed
+    </td>
+</tr>
+{% if orders.count > 0 %}
+    {% for order in orders %}
+    <tr>
+    <td>
+        {{ order.productId }}
+    </td>
+    <td>
+        {{ order.quantity }}
+    </td>
+    <td>
+        {{ order.date }}
+    </td>
+    <td>
+        {{ order.status }}
+    </td>
+</tr>
+    {% endfor %}
+{% endif %}
+</table>
 </body>
 </html>
